[package]
name = "wikipedia_api_fun"
version = "0.1.0"
authors = ["JustAnotherStrange <olinder1300@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.3"
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
